Add bounce to index and fix ball

--- a/index.html
+++ b/index.html
@@ -4,4 +4,7 @@
 
 <h1>Experiments</h1>
 
-<p>Comming soon...</p>
+<ul>
+  <li><a href=./bounce>Bounce</a> - a bouncing ball using hardware accelerometers.
+</ul>
+<p>More comming soon...</p>
