add led scroller and some style on index

--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!doctype html>
 
 <title>Experiments</title>
+<style>
+  body {
+    font-family: Helvetica, sans-serif;
+    padding: 4%;
+    line-height: 1.4;
+  }
+</style>
+
 
 <h1>Experiments</h1>
 
 <ul>
   <li><a href=./bounce>Bounce</a> - a bouncing ball using hardware accelerometers.
+  <li><a href=./svg-mask>SVG Mask</a> - dynamic SVG masks based on mouse movement
+  <li><a href=./led-scroller>LED Scroller</a> - recreating an LED scroller in JS.
 </ul>
 <p>More comming soon...</p>
