--- a/index.html
+++ b/index.html
@@ -7,14 +7,34 @@
     padding: 4%;
     line-height: 1.4;
   }
+  footer {
+    border-top: 1px solid;
+    margin-top: 5em;
+    padding-top: 1em;
+    font-size: 0.8em;
+  }
 </style>
 
 
 <h1>Experiments</h1>
 
+<p>Small proof of concepts. Usually incorporated into larger projects later.
+
 <ul>
-  <li><a href=./bounce>Bounce</a> - a bouncing ball using hardware accelerometers.
-  <li><a href=./svg-mask>SVG Mask</a> - dynamic SVG masks based on mouse movement
-  <li><a href=./led-scroller>LED Scroller</a> - recreating an LED scroller in JS.
+  <li><a href=./sparklines>Sparklines</a> - implememnted in d3.js - 24th April 2012
+  <li><a href=./bounce>Bounce</a> - a bouncing ball using hardware accelerometers. - 19th April 2012
+  <li><a href=./svg-mask>SVG Mask</a> - dynamic SVG masks based on mouse movement - 19th April 2012
+  <li><a href=./led-scroller>LED Scroller</a> - recreating an LED scroller in JS. - 4th September 2011
 </ul>
-<p>More comming soon...</p>
+
+<footer>
+<p>All code falls under the following licence unless otherwise stated
+
+<p>Copyright (C) 2012 <a href=http://e26.co.uk>Edd Sowden</a>
+
+<p>Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+<p>The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+<p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+</footer>
