--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <ul>
   <li><a href=./multiline>Multi-Line Chart</a> - implemented in d3.js - 24th April 2012
   <li><a href=./sparklines>Sparklines</a> - implememnted in d3.js - 24th April 2012
-  <li><a href=./bounce>Bounce</a> - a bouncing ball using hardware accelerometers. - 19th April 2012
+  <li><a href=./bounce>Bounce</a> - a bouncing ball using hardware accelerometers (view in iOS). - 19th April 2012
   <li><a href=./svg-mask>SVG Mask</a> - dynamic SVG masks based on mouse movement - 19th April 2012
   <li><a href=./led-scroller>LED Scroller</a> - recreating an LED scroller in JS. - 4th September 2011
 </ul>
