--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <p>Small proof of concepts. Usually incorporated into larger projects later.
 
 <ul>
+  <li><a href=./humanbytes>HumanBytes</a> - byte count formater - 2nd May 2012
   <li><a href=./multiline>Multi-Line Chart</a> - implemented in d3.js - 24th April 2012
   <li><a href=./sparklines>Sparklines</a> - implemented in d3.js - 24th April 2012
   <li><a href=./bounce>Bounce</a> - a bouncing ball using hardware accelerometers (view in iOS). - 19th April 2012
