--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <p>Small proof of concepts. Usually incorporated into larger projects later.
 
 <ul>
-  <li><a href=./line-drawing>Stroked Lin</a> - Draw the stroke along a path - 22nd Febrary 2013
+  <li><a href=./line-drawing>Stroked Line</a> - Draw the stroke along a path - 22nd Febrary 2013
   <li><a href=./pie-timer>Pie Timer</a> - Timed  growing pie - 19th August 2012
   <li><a href=./humanbytes>HumanBytes</a> - byte count formater - 2nd May 2012
   <li><a href=./multiline>Multi-Line Chart</a> - implemented in d3.js - 24th April 2012
