Add ARIA enhanced JavaScript tabs

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <p>Small proof of concepts. Usually incorporated into larger projects later.
 
 <ul>
+  <li><a href=./tabs>Accessible tabs</a> - ARIA enhanced JavaScript tabs - 14th November 2014
   <li><a href=./line-drawing>Stroked Line</a> - Draw the stroke along a path - 22nd Febrary 2013
   <li><a href=./pie-timer>Pie Timer</a> - Timed  growing pie - 19th August 2012
   <li><a href=./humanbytes>HumanBytes</a> - byte count formater - 2nd May 2012
