Use standard body style

--- a/tabs/index.html
+++ b/tabs/index.html
@@ -5,6 +5,12 @@
 <title>Accessible tabs</title>
 
 <style>
+body {
+  font-family: Helvetica, sans-serif;
+  padding: 4%;
+  line-height: 1.4;
+}
+
 ul.js-tabs{
   list-style-type: none;
   margin: 0;
@@ -16,7 +22,7 @@ ul.js-tabs li {
 }
 ul.js-tabs li a {
   display: block;
-  padding: 9px 16px;
+  padding: 9px 16px 8px;
   background: #eee;
   border: 2px solid #fff;
 }
