--- a/tabs/index.html
+++ b/tabs/index.html
@@ -110,7 +110,7 @@ ul.js-tabs li a:focus {
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="./tabs.js"></script>
 <script>
-  tabs.init();
+  new Tabs($('.js-tabs'));
 </script>
 
 </body>
