--- a/tabs/index.html
+++ b/tabs/index.html
@@ -69,7 +69,7 @@ ul.js-tabs li a:focus {
 
 <div class="tab-example">
   <ul class="js-tabs tabs-3">
-    <li><a href="#milk" class="active">Milk</a>
+    <li><a href="#milk">Milk</a>
     <li><a href="#eggs">Eggs</a>
     <li><a href="#cheese">Cheese</a>
   </ul>
